ecmascript/parser/tests/typescript-errors/tsc/statements/labeledStatements/labeledStatementWithLabel_strict/input.ts.stderr
error: Generator cannot be labelled
 --> $DIR/tests/typescript-errors/tsc/statements/labeledStatements/labeledStatementWithLabel_strict/input.ts:4:8
  |
4 | label: function* gen() { }
  |        ^^^^^^^^^^^^^^^^^^^

